--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,4 @@
 # These are supported funding model platforms
 
-buy_me_a_coffee: boninall
 buy_me_a_coffee: johnny1093
+custom: [https://github.com/Quorafind/Obsidian-Shortcuts/wiki/Donate]
