--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,3 +1,3 @@
 # These are supported funding model platforms
 
-buy_me_a_coffee: johnny1093
+custom: [https://github.com/Quorafind/Obsidian-Shortcuts/wiki/Donate]
