--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"author": "",
 	"license": "MIT",
 	"devDependencies": {
+		"@types/canvas-confetti": "^1.6.4",
 		"@types/node": "^16.11.6",
 		"@typescript-eslint/eslint-plugin": "5.29.0",
 		"@typescript-eslint/parser": "5.29.0",
@@ -22,6 +23,7 @@
 		"typescript": "4.7.4"
 	},
 	"dependencies": {
+		"canvas-confetti": "^1.9.3",
 		"keycode": "^2.2.1"
 	}
 }
