--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
 	"id": "shortcuts",
 	"name": "Shortcuts",
-	"version": "0.3.0-beta",
+	"version": "0.3.0-beta.1",
 	"minAppVersion": "0.15.0",
 	"description": "A shortcuts plugin for power users.",
 	"author": "Johnny & Boninall",
