--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
 		"typescript": "4.7.4"
 	},
 	"dependencies": {
+		"@codemirror/state": "^6.4.1",
+		"@codemirror/view": "^6.34.1",
 		"canvas-confetti": "^1.9.3",
 		"keycode": "^2.2.1",
 		"monkey-around": "^3.0.0"
