feat: support all features from suggestions

--- a/manifest.json
+++ b/manifest.json
@@ -11,5 +11,5 @@
 		"爱发电": "https://afdian.net/a/boninall",
 		"支付宝": "https://cdn.jsdelivr.net/gh/Quorafind/.github@main/IMAGE/%E6%94%AF%E4%BB%98%E5%AE%9D%E4%BB%98%E6%AC%BE%E7%A0%81.jpg"
 	},
-	"isDesktopOnly": false
+	"isDesktopOnly": true
 }
