--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 	"dependencies": {
 		"@codemirror/state": "^6.4.1",
 		"@codemirror/view": "^6.34.1",
+		"@floating-ui/dom": "^1.6.11",
 		"canvas-confetti": "^1.9.3",
 		"keycode": "^2.2.1",
 		"monkey-around": "^3.0.0"
