--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
 		"@typescript-eslint/parser": "5.29.0",
 		"builtin-modules": "3.3.0",
 		"esbuild": "0.14.47",
-		"obsidian": "latest",
 		"tslib": "2.4.0",
 		"typescript": "4.7.4"
 	},
@@ -28,6 +27,7 @@
 		"@floating-ui/dom": "^1.6.11",
 		"canvas-confetti": "^1.9.3",
 		"keycode": "^2.2.1",
-		"monkey-around": "^3.0.0"
+		"monkey-around": "^3.0.0",
+		"obsidian": "^1.7.2"
 	}
 }
