--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
 	"id": "shortcuts",
 	"name": "Shortcuts",
-	"version": "0.3.9",
+	"version": "0.4.0-beta.1",
 	"minAppVersion": "0.15.0",
 	"description": "Activate commands using multiple shortcut methods.",
 	"author": "Johnny & Boninall",
