--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "shortcuts",
-	"version": "0.3.9",
+	"version": "0.4.0-beta.1",
 	"description": "A shortcuts plugin for power users.",
 	"main": "main.js",
 	"scripts": {
